<?xml version="3.0"?>
<package format="3">
  <name>conceptio_msgs</name>
  <version>3.0.2</version>
  <description>
    Rosbridge provides a JSON API to ROS functionality for non-ROS programs.
    There are a variety of front ends that interface with rosbridge, including
    a WebSocket server for web browsers to interact with.

    Rosbridge_suite is a meta-package containing rosbridge, various front end
    packages for rosbridge like a WebSocket package, and helper packages.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rosbridge_suite</url>
  <url type="bugtracker">https://github.com/RobotWebTools/rosbridge_suite/issues</url>
  <url type="repository">https://github.com/RobotWebTools/rosbridge_suite</url>

  <author email="jonathan.c.mace@gmail.com">Jonathan Mace</author>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <maintainer email="ros-tooling@foxglove.dev">Foxglove</maintainer>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>